Dockerfile - separated out entrypoint, cleanup